[gd_scene load_steps=12 format=3 uid="uid://b7gyevpeuk8q7"]

[ext_resource type="Texture2D" path="res://addons/godot-idea-board/icon/handle.svg" id="1_hiwoi"]
[ext_resource type="StyleBox" uid="uid://w82ranjj3lbw" path="res://addons/godot-idea-board/theme/line_handle_frame_stylebox.tres" id="2_x0gsd"]
[ext_resource type="StyleBox" uid="uid://8me00ja0tbra" path="res://addons/godot-idea-board/theme/line_handle_frame_white_stylebox.tres" id="3_3yj5h"]
[ext_resource type="Script" path="res://addons/godot-idea-board/line_handle_node.gd" id="4_kje78"]
[ext_resource type="StyleBox" uid="uid://1a2ks43qywgj" path="res://addons/godot-idea-board/theme/text_light_title_line_edit.tres" id="5_n7r5b"]
[ext_resource type="Script" path="res://addons/godot-idea-board/context_menu/line_handle_menu.gd" id="5_qleyb"]
[ext_resource type="StyleBox" uid="uid://dd3e5yean6mrf" path="res://addons/godot-idea-board/theme/text_light_title_selected_line_edit.tres" id="6_vh0tj"]
[ext_resource type="Texture2D" path="res://addons/godot-idea-board/icon/normal_arrow.svg" id="10_rq6cd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7st5x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jh22c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2j14n"]

[node name="LineHandleNode" type="GraphNode"]
custom_minimum_size = Vector2(42, 42)
offset_right = 59.0
offset_bottom = 23.0
mouse_default_cursor_shape = 13
theme_override_icons/resizer = ExtResource("1_hiwoi")
theme_override_styles/panel = ExtResource("2_x0gsd")
theme_override_styles/panel_selected = ExtResource("3_3yj5h")
theme_override_styles/titlebar = SubResource("StyleBoxEmpty_7st5x")
theme_override_styles/titlebar_selected = SubResource("StyleBoxEmpty_jh22c")
theme_override_styles/slot = SubResource("StyleBoxEmpty_2j14n")
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
script = ExtResource("4_kje78")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/caret_width = 3
theme_override_styles/normal = ExtResource("5_n7r5b")
theme_override_styles/focus = ExtResource("6_vh0tj")
alignment = 1
expand_to_text_length = true

[node name="LockedButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
mouse_default_cursor_shape = 2
icon_alignment = 1

[node name="ContextMenu" type="PopupMenu" parent="."]
script = ExtResource("5_qleyb")

[node name="Line2D" type="Line2D" parent="."]
show_behind_parent = true
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="ArrowFrom" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_rq6cd")

[node name="ArrowTo" type="Sprite2D" parent="."]
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_rq6cd")
